--- a/modules/config/config.json
+++ b/modules/config/config.json
@@ -2,5 +2,14 @@
     "port": 3001,
     "korannDB": {
         "connectionString": "mongodb://localhost/korann"
+    },
+    "session": {
+        "secret": "ZEKJhaefkKLS",
+        "key": "sid",
+        "cookie": {
+            "path": "/",
+            "httpOnly": true,
+            "maxAge": null
+        }
     }
 }
