added bodyParser; added express-error for handling errors in debug mode; fixed error's message; added script for generate clientApp with roles; added script stub for users; separate models to app and data models; added few implementation for product api methods; added auth module; added app db models; added crypto stubs; added help packages; refactoring;

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
         "mongoose": "*",
         "winston": "*",
         "nconf": "*",
-        "passport": "*",
-        "connect-mongo": "*"
+        "connect-mongo": "*",
+        "async": "*",
+        "node-uuid": "*",
+        "express-error": "*"
     },
     "main": "app.js",
     "devDependencies": {
-
     },
     "repository": {
         "type": "git",
@@ -25,7 +26,11 @@
     "keywords": [
         "korann",
         "korann.core",
-        "api"
+        "api",
+        "кора",
+        "кора нн",
+        "косметика",
+        "кора косметика"
     ],
     "author": "I_van",
     "license": "ISC"
