inject config to db module; fixed error with routes: auth routes were not available. renaming; added test data runner; clean up; fixed user authentication; optimize config module;

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "connect-mongo": "*",
         "async": "*",
         "node-uuid": "*",
-        "express-error": "*"
+        "express-error": "*",
+        "underscore": "*"
     },
     "main": "app.js",
     "devDependencies": {
