removed idea files; removed standard session using; provide expired session to client; bugfix; added logout functionality; push user schema to separate file;

--- a/modules/config/config.json
+++ b/modules/config/config.json
@@ -3,13 +3,10 @@
     "db": {
         "connectionString": "mongodb://localhost/korann"
     },
-    "session": {
-        "secret": "ZEKJhaefkKLS",
-        "key": "sid",
-        "cookie": {
-            "path": "/",
-            "httpOnly": true,
-            "maxAge": null
-        }
+    "appSession": {
+        "expires": 5184000000
+    },
+    "userSession": {
+        "expires": 86400000
     }
 }
