--- a/package.json
+++ b/package.json
@@ -6,20 +6,26 @@
         "start": "node app.js"
     },
     "dependencies": {
-        "express": "3.4.8",
-        "jade": "*",
-        "mongoose": "*",
-        "winston": "*",
+        "async": "^0.9.0",
+        "body-parser": "^1.2.2",
+        "compression": "^1.0.3",
+        "connect-mongo": "^0.4.1",
+        "cookie-parser": "^1.1.0",
+        "errorhandler": "^1.0.1",
+        "express": "^4.4.0",
+        "express-validator": "^2.1.2",
+        "jade": "^1.3.1",
+        "latest": "^0.1.2",
+        "method-override": "^1.0.2",
+        "mongoose": "^3.8.12",
+        "morgan": "^1.1.1",
         "nconf": "*",
-        "connect-mongo": "*",
-        "async": "*",
         "node-uuid": "*",
-        "express-error": "*",
-        "underscore": "*"
+        "underscore": "*",
+        "winston": "^0.7.3"
     },
     "main": "app.js",
-    "devDependencies": {
-    },
+    "devDependencies": {},
     "repository": {
         "type": "git",
         "url": "https://I_van@bitbucket.org/I_van/korann.git"
