--- a/package.json
+++ b/package.json
@@ -7,28 +7,27 @@
     },
     "dependencies": {
         "async": "^0.9.0",
-        "body-parser": "^1.2.2",
-        "compression": "^1.0.3",
+        "body-parser": "^1.4.3",
+        "compression": "^1.0.8",
         "connect-mongo": "^0.4.1",
-        "cookie-parser": "^1.1.0",
-        "errorhandler": "^1.0.1",
-        "express": "^4.4.0",
-        "express-validator": "^2.1.2",
+        "cookie-parser": "^1.3.2",
+        "errorhandler": "^1.1.1",
+        "express": "^4.5.0",
+        "express-validator": "^2.3.0",
         "jade": "^1.3.1",
-        "latest": "^0.1.2",
+        "lodash": "^2.4.1",
         "method-override": "^1.0.2",
         "mongoose": "^3.8.12",
         "morgan": "^1.1.1",
-        "nconf": "*",
-        "node-uuid": "*",
-        "underscore": "*",
+        "nconf": "^0.6.9",
+        "node-uuid": "^1.4.1",
         "winston": "^0.7.3"
     },
     "main": "app.js",
     "devDependencies": {},
     "repository": {
         "type": "git",
-        "url": "https://I_van@bitbucket.org/I_van/korann.git"
+        "url": "https://I_van@bitbucket.org/I_van/korann.core.git"
     },
     "keywords": [
         "korann",
