--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-    "name": "korann",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "start": "node app.js"
-    },
-    "dependencies": {
-        "async": "^0.9.0",
-        "body-parser": "^1.4.3",
-        "compression": "^1.0.8",
-        "connect-mongo": "^0.4.1",
-        "cookie-parser": "^1.3.2",
-        "errorhandler": "^1.1.1",
-        "express": "^4.5.0",
-        "express-validator": "^2.3.0",
-        "jade": "^1.3.1",
-        "lodash": "^2.4.1",
-        "method-override": "^1.0.2",
-        "mongoose": "^3.8.12",
-        "morgan": "^1.1.1",
-        "nconf": "^0.6.9",
-        "node-uuid": "^1.4.1",
-        "winston": "^0.7.3"
-    },
-    "main": "app.js",
-    "devDependencies": {},
-    "repository": {
-        "type": "git",
-        "url": "https://I_van@bitbucket.org/I_van/korann.core.git"
-    },
-    "keywords": [
-        "korann",
-        "korann.core",
-        "api",
-        "кора",
-        "кора нн",
-        "косметика",
-        "кора косметика"
-    ],
-    "author": "I_van",
-    "license": "ISC"
+  "name": "korann",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "async": "^0.9.0",
+    "body-parser": "^1.9.0",
+    "compression": "^1.2.0",
+    "connect-mongo": "^0.4.1",
+    "cookie-parser": "^1.3.2",
+    "errorhandler": "^1.2.2",
+    "express": "^4.9.8",
+    "express-validator": "^2.6.0",
+    "jade": "^1.7.0",
+    "lodash": "^2.4.1",
+    "method-override": "^1.0.2",
+    "mongoose": "3.6.13",
+    "morgan": "^1.4.0",
+    "nconf": "^0.6.9",
+    "node-uuid": "^1.4.1",
+    "winston": "^0.7.3"
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://I_van@bitbucket.org/I_van/korann.core.git"
+  },
+  "keywords": [
+    "korann",
+    "korann.core",
+    "api",
+    "кора",
+    "кора нн",
+    "косметика",
+    "кора косметика"
+  ],
+  "author": "I_van",
+  "license": "ISC"
 }
